--- a/driver.html
+++ b/driver.html
@@ -191,9 +191,10 @@
   <div class="wrap">
     <div class="topbar">
       <div class="brand">
-        <h1>司機今日任務</h1>
-        <div class="sub" id="subtitle">初始化中…</div>
+         <h1 id="title">司機今日任務</h1>
+         <div class="sub" id="subtitle">初始化中…</div>
       </div>
+
       <div class="spacer"></div>
 
       <div class="row">
@@ -534,9 +535,13 @@
     } else {
       setPill('pillTasks', '任務：無', 'warn');
     }
+    // 顯示司機名字（最重要）
+     if (me && me.driverName) {
+      el('title').textContent = `🚚 ${me.driverName}｜今日任務`;
+    }
 
     renderTasks(me);
-
+    
     setSubtitle(`已載入（${safeText(payload.chosenDate)}）`);
   }
 
@@ -592,4 +597,5 @@
 </script>
 </body>
 </html>
+
 
